[project]
name = "hw-11-1"
version = "0.1.0"
description = ""
authors = [
    {name = "Kokc80",email = "kokc@inbox.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "hw"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
