[project]
name = "hw-11-1"
version = "0.1.0"
description = ""
authors = [
    {name = "Kokc80",email = "kokc@inbox.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv (>=1.2.1,<2.0.0)",
    "requests (>=2.32.5,<3.0.0)"
]

[tool.poetry]
packages = [{include = "hw"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
# Максимальная длина строки
line-length = 119
# Исключены из проверки
exclude = '''
(
  /(
    \.git
    |.venv
    | venv
  )/
)'''

[tool.isort]
# максимальная длина строки
line_length = 119

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = '''
(
  /(
    \.venv
  )/
)'''
